--- a/header.html
+++ b/header.html
@@ -70,14 +70,14 @@
                                     </li>
                                     <li>
                                         <!-- <span>Cirurgia</span>
-                                        <ul class="dropdown-sec">
-                                            <li><a href="pages/cirurgia.html#Cirurgia">Consulta de Cirurgia</a>
-                                            </li>
-                                            <li><a href="pages/cirurgia.html#anel">Circuncisão com anel</a></li>
-                                            <li><a href="pages/cirurgia.html#sutura">Sutura de feridas
-                                                    superficiais</a></li>
-                                        </ul>
-                                        <br> -->
+                                                    <ul class="dropdown-sec">
+                                                        <li><a href="pages/cirurgia.html#Cirurgia">Consulta de Cirurgia</a>
+                                                        </li>
+                                                        <li><a href="pages/cirurgia.html#anel">Circuncisão com anel</a></li>
+                                                        <li><a href="pages/cirurgia.html#sutura">Sutura de feridas
+                                                                superficiais</a></li>
+                                                    </ul>
+                                                    <br> -->
                                         <span>Enfermagem
                                         </span>
                                         <ul class="dropdown-sec">
@@ -93,7 +93,7 @@
                                         <ul class="dropdown-sec">
                                             <li><a href="pages/nutricao.html#A">Nutrição Geral</a></li>
                                             <li><a href="pages/nutricao.html#B">Nutrição Infantil</a></li>
-                                            <li><a href="pages/nutricao.html#C">Diabetes Gestacional</a></li>
+                                            <!-- <li><a href="pages/nutricao.html#C">Diabetes Gestacional</a></li> -->
                                             <li><a href="pages/nutricao.html#D">Pré-conceção</a></li>
                                             <li><a href="pages/nutricao.html#E">Pré-natal</a></li>
                                         </ul>
@@ -214,9 +214,9 @@
                             </ul>
                         </li>
                         <a href="#" class="primary-btn" style="
-                                                right: 0;
-                                                position: absolute; margin-top: 0.4rem;
-                                            "> <i class="fa fa-lock"></i> Área Reservada</a>
+                                                            right: 0;
+                                                            position: absolute; margin-top: 0.4rem;
+                                                        "> <i class="fa fa-lock"></i> Área Reservada</a>
                     </ul>
 
                 </nav>
