--- a/pages/amament-pre-parto.html
+++ b/pages/amament-pre-parto.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
+    <meta name="description" content="Clinica de Pre-pos">
     <meta name="keywords" content="Aesthetic, Pre-pos, Clinica em Maputo, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -231,7 +231,7 @@
                                 <div class="row">
                                     <div class="col-lg-12">
                                         <div class="section-title">
-                                            <h5 class=""><b>Esta consulta destina-se a:</b></h5>
+                                            <h5 class="underline"><b>Esta consulta destina-se a:</b></h5>
                                             <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
                                         </div>
                                     </div>
@@ -245,37 +245,20 @@
                                 </p>
 
                                 <div class="section-title pt-4">
-                                    <h5 class=""><b>Temáticas abordadas nesta consulta:</b></h5>
+                                    <h5 class="underline"><b>Temáticas abordadas nesta consulta:</b></h5>
                                     <!-- <span>N’A Clínica, damos consultas em várias áreas de especialidade</span> -->
                                 </div>
-                                <ul class="list mb-4">
-                                    <li><a><i class="fa fa-check-circle"></i> Pega correta;</a></li>
-                                    <li><a><i class="fa fa-check-circle"></i> Diferentes posições de amamentação;</a>
-                                    </li>
-                                    <li><a><i class="fa fa-check-circle"></i> Confusão de bicos;</a></li>
-                                    <li><a><i class="fa fa-check-circle"></i> Sinais de fome;</a>
-                                    </li>
-                                    <li><a><i class="fa fa-check-circle"></i> Rejeição da amamentação;</a></li>
-                                    <li><a><i class="fa fa-check-circle"></i> Escasso ganho de peso;</a></li>
-                                    <li><a><i class="fa fa-check-circle"></i> Diferentes técnicas para oferecer leite
-                                            materno sem usar a mama.</a></li>
-                                </ul>
-                                <p class="mb-4"><b>Mãe e amamentação:</b> amamentação dolorosa, lesões nas mamas,
-                                    mastites, técnica
-                                    manual de extração de leite materno, técnica de extração de
-                                    leite materno com bomba, relactação
+                                <p class="mb-4"><b>Bebé e amamentação:</b>  pega correta, diferentes posições de amamentação, confusão de bicos, sinais de fome, rejeição da amamentação, escasso ganho de peso, diferentes técnicas para oferecer leite materno sem usar a mama.
                                 </p>
-                                <p class="mb-4"><b>Regresso ao trabalho e amamentação:</b> como preparar o regresso ao
-                                    trabalho,
-                                    armazenamento adequado de leite materno, manutenção da amamentação em exclusivo
-                                    até aos 6 meses de vida.
+                                <p class="mb-4"><b>Mãe e amamentação:</b> amamentação dolorosa, lesões nas mamas, mastites, técnica manual de extração de leite materno, técnica de extração de leite materno com bomba, relactação.
+                                </p>
+                                <p class="mb-4"><b>Regresso ao trabalho e amamentação:</b> como preparar o regresso ao trabalho, armazenamento adequado de leite materno, manutenção da amamentação em exclusivo até aos 6 meses de vida.
                                 </p>
                                 <p class="mb-4"><b>Desmame:</b> ccomo fazer um desmame gentil e progressivo, desmame
                                     noturno, desmame natural.
                                 </p>
                                 <p>
-                                    <b>Importante:</b> esta consulta inclui a recolha da história clínica da
-                                    amamentação atual e prévias (se procede) e a observação da mamada.
+                                    <b>Importante:</b> Esta consulta inclui a recolha da história clínica da amamentação atual e prévias (se procede), o exame físico da paciente e do seu bebé e a observação da mamada. Traga o seu Boletim de Saúde de Grávida e o Boletim de Saúde do seu bebé. Aconselhamos a que ambos vistam roupas confortáveis e apropriadas à amamentação.
                                 </p>
                             </div>
                             <a href="#" class="primary-btn">Marcar Consulta </a>
@@ -342,8 +325,6 @@
             prePartoDiv.style.display = 'block'; // Exibe a div pré-parto
             posPartoDiv.style.display = 'none';  // Esconde a div pós-parto
             partoText.textContent = "Consulta de Amamentação Pré-parto"; // Atualiza o texto para "Pré-parto"
-           // Rolar para o topo suavemente
-    window.scrollTo({ top: 0, behavior: 'smooth' });
         }
 
         // Função para exibir a consulta pós-parto, esconder a pré-parto e atualizar o texto
@@ -351,8 +332,6 @@
             posPartoDiv.style.display = 'block'; // Exibe a div pós-parto
             prePartoDiv.style.display = 'none';  // Esconde a div pré-parto
             partoText.textContent = "Consulta de Amamentação Pós-parto"; // Atualiza o texto para "Pós-parto"
-            // Rolar para o topo suavemente
-    window.scrollTo({ top: 0, behavior: 'smooth' });
         }
 
         // Verificar o fragmento da URL e inicializar a página de acordo
