--- a/pages/team-sing.html
+++ b/pages/team-sing.html
@@ -1,4 +1,4 @@
-<meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -260,9 +260,7 @@
             paragrafo.innerHTML = "Nutricionista clínica com mais de 10 anos de experiência a fazer atendimento presencial e online. Mestre em Ciências da Nutrição pela Universidade de Chester no Reino Unido, tem vindo a acrescentar ao seu currículo formações mais específicas na área da Nutrição. </br></br> Foi na sua jornada de maternidade que experienciou a introdução alimentar e que ganhou uma nova perspetiva sobre a vida no geral e sobre a educação alimentar em particular. </br></br>  Ensina os seus pacientes a alimentarem-se adequadamente e de forma personalizada para que implementem as recomendações com motivação, foco e consistência de modo a superarem todos os desafios que estes processos implicam e a alcançarem os resultados pretendidos.";
             frase.innerHTML = "<b>«A saúde é o melhor que a Nutrição tem para te oferecer!»</b>";
             profile.innerHTML = "<img src='../img/team/team-6.jpg' alt='Ana Castro Santos' alt='Ana Castro Santos'>";
-       
-    // Rolar para o topo suavemente
-    window.scrollTo({ top: 0, behavior: 'smooth' });
+    window.scrollTo({ top: 0, behavior: 'smooth' });    // Rolar para o topo suavemente
            }
           // Função para exibir a consulta Cirurgia, esconder a pós-parto e atualizar o texto
           function showC() {
