--- a/pages/nutricao.html
+++ b/pages/nutricao.html
@@ -525,6 +525,7 @@
             BDiv.style.display = 'none';  // Esconde a div Cirurgia
             DDiv.style.display = 'block'; // Exibe a div pós-parto
             EDiv.style.display = 'none'; // Exibe a div pós-parto
+            img.style.backgroundImage = "url('../img/blog/details/Pré-conceção.jpg')"; // Atualiza o texto para "Cirurgia"
             title.textContent = "Consulta de Pré-conceção"; // Atualiza o texto para "Pós-parto"
             ABtn.classList.remove("active");
             BBtn.classList.remove("active");
