--- a/header.html
+++ b/header.html
@@ -113,18 +113,18 @@
                                         <ul class="dropdown-sec">
                                             <li><a href="pages/terapia.html#A">Infantil</a></li>
                                             <li><a href="pages/terapia.html#B">Neurológica</a></li>
-                                            <li><a href="pages/terapia.html#C">Saúde Mental</a></li>
-                                            <li><a href="pages/terapia.html#D">Snoezelen</a></li>
-                                            <li><a href="pages/terapia.html#D">Snoezelen no Pós-Parto</a></li>
+                                            <li><a href="pages/terapia.html#D">Saúde Mental</a></li>
+                                            <li><a href="pages/terapia.html#E">Snoezelen</a></li>
+                                            <li><a href="pages/terapia.html#C">Snoezelen no Pós-Parto</a></li>
                                         </ul>
                                     </li>
                                     <li>
                                         <span>Testes diagnósticos</span>
                                         <ul class="dropdown-sec">
-                                            <li><a href="#">Teste do pezinho</a></li>
-                                            <li><a href="#">Teste rápido de amigdalite bacteriana</a></li>
-                                            <li><a href="#">Teste rápido de malária</a></li>
-                                            <li><a href="#">Teste rápido de urina</a></li>
+                                            <li><a href="pages/teste.html#A">Teste do pezinho</a></li>
+                                            <li><a href="pages/teste.html#B">Teste rápido de amigdalite bacteriana</a></li>
+                                            <li><a href="pages/teste.html#D">Teste rápido de malária</a></li>
+                                            <li><a href="pages/teste.html#E">Teste rápido de urina</a></li>
                                         </ul>
                                     </li>
                                 </ul>
@@ -135,10 +135,10 @@
                         <li><a class="arrow" href="./additional-services.html">Vacinação<span
                                     class="dropdown-arrow"></span></a>
                             <ul class="dropdown">
-                                <li><a href="#">Adulto</a></li>
-                                <li><a href="#">Gravidez</a></li>
-                                <li><a href="#">Infantil</a></li>
-                                <li><a href="#">Viajante</a></li>
+                                <li><a href="pages/vacinacao.html#A">Adulto</a></li>
+                                <li><a href="pages/vacinacao.html#B">Gravidez</a></li>
+                                <li><a href="pages/vacinacao.html#D">Infantil</a></li>
+                                <li><a href="pages/vacinacao.html#E">Viajante</a></li>
                             </ul>
                         </li>
                         <!-- Consultas -->
