--- a/pages/nutricao.html
+++ b/pages/nutricao.html
@@ -133,8 +133,8 @@
             <div class="d-flex">
                 <div  id="header" class="col-lg-8 col-md-8">
                     <div class="row">
-                        <div class="blog__details__text ml-4 mr-4">
-                            <div class="blog__details__text__item">
+                     <div class="blog__details__text ml-4 mr-4">
+                        <div class="blog__details__text__item">
                     <div class="section-title">
                         <h5 class="mb-0 mt-4 h4"><b>Um hábito nutricional saudável é um presente que
                                 fica para a vida!</b></h5>
@@ -204,7 +204,7 @@
                 </div>
                 </div>
             </div>
-        </div>
+             </div>
                 <div id="A" class="col-lg-8 col-md-8">
                     <div class="row">
                         <div class="blog__details__text ml-4 mr-4">
@@ -445,7 +445,7 @@
                                     que consultas tem disponíveis.</p>
                                 <div class="d-flex">
                                     <div class="col-lg-12 col-md-12 ">
-                                        <div class="card-text">
+                                        <div class="card-text d-grid">
                                             <button id="ABtn">a) Consulta de Nutrição Geral</button>
                                             <button id="BBtn">b) Consulta de Nutrição Infantil</button>
                                             <button id="DBtn">c) Consulta de Pré-conceção</button>
