--- a/pages/viajante.html
+++ b/pages/viajante.html
@@ -120,8 +120,8 @@
                                     <div class="section-title">
                                         <h2 class="subtitle fw-bolder">Medicina do Viajante
                                         </h2>
-                                        <span class="mb-4"><b>Viajar em família é um dos prazeres da
-                                                vida!</b></span>
+                                        <h5 class="mb-0 mt-3 h4"><b>Viajar em família é um dos prazeres da
+                                                vida!</b></h5>
                                         <br>
                                         <p class="mb-4 mt-4"> <i>N’A Clínica</i> sabemos que viajar é uma das
                                             necessidades
