--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@
                                 </div>
                             </div>
 
-                            <p>A Clínica nasce em 2025 do sonho de criar um espaço onde as famílias se sintam em casa.
+                            <p><i>A Clínica</i> nasce em 2025 do sonho de criar um espaço onde as famílias se sintam em casa.
                                 <br> Diz o ditado que <b>«para criar uma criança faz falta uma aldeia»</b> e, no
                                 mundo
                                 agitado onde vivemos, cada vez há menos rede
@@ -158,7 +158,7 @@
                                 <b>Quando nasce um bebé, nasce uma mãe e um pai!</b> Nasce um amor incondicional, um
                                 carinho enorme e uma alegria maravilhosa!
                                 Nasce, também, uma culpa e uma preocupação que nos acompanham ao longo da vida. <br>
-                                <b> <i> N’A Clínica</i> focamo-nos na unidade nuclear da nossa sociedade: a família!
+                                <b> <i>N’A Clínica</i> focamo-nos na unidade nuclear da nossa sociedade: a família!
                                 </b> Neste
                                 espaço
                                 vai encontrar profissionais que
