--- a/header.html
+++ b/header.html
@@ -1,18 +1,18 @@
 <div class="header__top" style='background-image: url("img/blog/details/blog-hero11.jpg");'>
     <div class="container">
         <div class="row">
-            <div class="col-lg-8">
+            <div class="col-lg-10">
                 <ul class="header__top__left">
                     <li><a href="#" class="text-white"><img src="img/icons/contacto.png" class="fa mr-2" width="16"
                                 height="16" alt=""> +258 84 869 7194</a></li>
                     <li><img src="img/icons/home.png" class="fa mr-2" width="16" height="16" alt=""> Edifício ou
-                        Shopping 24, Avenida 24 de Julho, Loja 20
+                        Shopping 24, Avenida 24 de Julho, Loja 20 (R/C, corredor central ao lado do cabeleireiro)
                     </li>
                     <li><img src="img/icons/horario.png" class="fa mr-2" width="16" height="16" alt=""> Seg a Sex 8:00
                         às 18:00</li>
                 </ul>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-2">
                 <div class="header__top__right">
                     <a href="#"><i class="fa fa-facebook"></i></a>
                     <a href="#"><i class="fa fa-twitter"></i></a>
@@ -70,14 +70,14 @@
                                     </li>
                                     <li>
                                         <!-- <span>Cirurgia</span>
-                                                    <ul class="dropdown-sec">
-                                                        <li><a href="pages/cirurgia.html#Cirurgia">Consulta de Cirurgia</a>
-                                                        </li>
-                                                        <li><a href="pages/cirurgia.html#anel">Circuncisão com anel</a></li>
-                                                        <li><a href="pages/cirurgia.html#sutura">Sutura de feridas
-                                                                superficiais</a></li>
-                                                    </ul>
-                                                    <br> -->
+                                                                <ul class="dropdown-sec">
+                                                                    <li><a href="pages/cirurgia.html#Cirurgia">Consulta de Cirurgia</a>
+                                                                    </li>
+                                                                    <li><a href="pages/cirurgia.html#anel">Circuncisão com anel</a></li>
+                                                                    <li><a href="pages/cirurgia.html#sutura">Sutura de feridas
+                                                                            superficiais</a></li>
+                                                                </ul>
+                                                                <br> -->
                                         <span>Enfermagem
                                         </span>
                                         <ul class="dropdown-sec">
@@ -122,7 +122,8 @@
                                         <span>Testes diagnósticos</span>
                                         <ul class="dropdown-sec">
                                             <li><a href="pages/teste.html#A">Teste do pezinho</a></li>
-                                            <li><a href="pages/teste.html#B">Teste rápido de amigdalite bacteriana</a></li>
+                                            <li><a href="pages/teste.html#B">Teste rápido de amigdalite bacteriana</a>
+                                            </li>
                                             <li><a href="pages/teste.html#D">Teste rápido de malária</a></li>
                                             <li><a href="pages/teste.html#E">Teste rápido de urina</a></li>
                                         </ul>
@@ -149,11 +150,12 @@
                                     <li>
                                         <span>A Clínica durante a gravidez</span>
                                         <ul class="dropdown-sec">
-                                            <li><a href="#">Amamentação</a></li>
-                                            <li><a href="#">Pediatria pré-natal</a></li>
-                                            <li><a href="#">Nutrição: pré-conceção, pré-natal, Diabetes
-                                                    Gestacional</a></li>
-                                            <li><a href="#">Snoezelen na gravidez</a></li>
+                                            <li><a href="pages/amament-pre-parto.html#pre">Amamentação</a></li>
+                                            <li><a href="pages/pediatria.html#A">Pediatria pré-natal</a></li>
+                                            <li><a href="pages/nutricao.html#D">Nutrição pré-conceção </a></li>
+                                            <li><a href="pages/nutricao.html#E">Nutrição pré-natal</a></li>
+                                            <li><a href="pages/gravidez.html#A">Diabetes Gestacional</a></li>
+                                            <li><a href="pages/gravidez.html#B">Snoezelen na gravidez</a></li>
                                         </ul>
                                     </li>
 
@@ -165,12 +167,9 @@
                                             <li><a href="#">Preparation for Breastfeeding in English</a></li>
                                         </ul>
                                         <br>
-
+                                        <span>Exercício Físico</span>
                                         <ul class="dropdown-sec">
-                                            <span>
-                                                <li><a href="#" class="primary-btn">
-                                                        Galeria de fotos</a></li>
-                                            </span>
+                                            <li><a href="#">Plano de treino para a gravidez</a></li>
                                         </ul>
 
                                     </li>
@@ -182,9 +181,11 @@
                                             <li><a href="#">Pre-natal course in English</a></li>
                                         </ul>
                                         <br>
-                                        <span>Exercício Físico</span>
                                         <ul class="dropdown-sec">
-                                            <li><a href="#">Plano de treino para a gravidez</a></li>
+                                            <span>
+                                                <li><a href="#" class="primary-btn">
+                                                        Galeria de fotos</a></li>
+                                            </span>
                                         </ul>
                                     </li>
                                 </ul>
@@ -214,9 +215,9 @@
                             </ul>
                         </li>
                         <a href="#" class="primary-btn" style="
-                                                            right: 0;
-                                                            position: absolute; margin-top: 0.4rem;
-                                                        "> <i class="fa fa-lock"></i> Área Reservada</a>
+                                                                        right: 0;
+                                                                        position: absolute; margin-top: 0.4rem;
+                                                                    "> <i class="fa fa-lock"></i> Área Reservada</a>
                     </ul>
 
                 </nav>
