--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
-<meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional."><!DOCTYPE html>
+<meta name="description"
+    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
+<meta name="description"
+    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
+<meta name="description"
+    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
+<meta name="description"
+    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
+<meta name="description"
+    content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
-   <meta name="description" content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
+    <meta name="description"
+        content="A Clínica é uma instituição de saúde focada no atendimento familiar, especialmente nas áreas de maternidade, pediatria, nutrição, vacinação e terapia ocupacional.">
     <meta name="keywords" content="Aesthetic, Pre-pos, Clinica em Maputo, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -87,7 +98,7 @@
     <!-- Header Section Begin -->
     <header class="header">
         <div id="header-container">
-          
+
         </div>
     </header>
     <!-- Header Section End -->
@@ -106,7 +117,7 @@
 
 
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-12 text-center" style="background-image: url('img/bg4.png');">
                     <ul class="servocos d-flex flex-wrap justify-content-between">
                         <li>
                             <a href="pages/pediatria.html">
@@ -208,13 +219,13 @@
     </section>
 
     <!-- Início da Secção de Serviços -->
-    <section class="chooseus mt-4">
+    <section class="chooseus mt-5">
         <div class="container">
             <!-- Título da Seção -->
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="section-title">
-                        <h2>A SUA Jornada de Maternidade começa aqui</h2>
+                        <h2>A SUA Jornada de Maternidade começa aqui.</h2>
                         <span class="subtitle">Da gravidez, ao apoio no pós-parto e ao crescimento do seu
                             filhote!</span>
                     </div>
@@ -272,14 +283,14 @@
                             <div class="row">
                                 <!-- Texto Principal -->
                                 <div class="col-lg-12 col-md-12">
-                                    <div class="section-title text-white">
+                                    <div class="section-title text-white text-center">
                                         <h2>Conheça <i>A Clínica</i></h2>
                                         <!-- <span>A Clínica conta com uma clínica especializada, equipada com uma equipa
                                             multidisciplinar.</span> -->
                                     </div>
                                     <div class="col-lg-10">
                                         <p class="text-justify text-white h5">
-                                            A Clínica é uma instituição
+                                            <i>A Clínica</i> é uma instituição
                                             de saúde com o foco na família.
                                             Desejamos
                                             apoiar
@@ -287,7 +298,7 @@
                                             paternidade, cuidando de todos os elementos que as constituem
                                             física,
                                             psicológica e emocionalmente.</br><br>
-                                            N’A Clínica</i> vai
+                                            <i>N’A Clínica</i> vai
                                             encontrar, entre outras, as especialidades de
                                             Pediatria,
                                             Nutrição, Vacinação e Terapia Ocupacional.</br>
